feat(Bot): Create mechanism for selecting and displaying one form

--- a/InfoTeamsExperiment/Templates/appPackage/manifest.template.json
+++ b/InfoTeamsExperiment/Templates/appPackage/manifest.template.json
@@ -42,8 +42,8 @@
                     ],
                     "commands": [
                         {
-                            "title": "form",
-                            "description": "Choose a form to fill in"
+                            "title": "search",
+                            "description": "Search for a form by name and description"
                         }
                     ]
                 }
