--- a/.github/workflows/TestCI.yml
+++ b/.github/workflows/TestCI.yml
@@ -18,13 +18,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Setup .NET 6
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 6.0.x
+      - name: Install dependencies
+        run: dotnet restore InfoTeams.sln
+      - name: Build
+        run: dotnet build InfoTeams.sln
+      - name: Test
+        run: dotnet test InfoTeams.sln --filter "Category!= Manual"
