--- a/InfoTeamsExperiment/.fx/configs/projectSettings.json
+++ b/InfoTeamsExperiment/.fx/configs/projectSettings.json
@@ -12,13 +12,13 @@
             "Bot"
         ],
         "activeResourcePlugins": [
-            "fx-resource-identity",
-            "fx-resource-bot",
-            "fx-resource-aad-app-for-teams",
             "fx-resource-local-debug",
             "fx-resource-appstudio",
             "fx-resource-cicd",
-            "fx-resource-api-connector"
+            "fx-resource-api-connector",
+            "fx-resource-aad-app-for-teams",
+            "fx-resource-bot",
+            "fx-resource-identity"
         ]
     },
     "programmingLanguage": "csharp",
@@ -30,5 +30,42 @@
             ]
         }
     },
-    "isFirstTimeOpenProject": false
+    "isFirstTimeOpenProject": false,
+    "components": [
+        {
+            "name": "aad-app",
+            "provision": true,
+            "deploy": true
+        },
+        {
+            "name": "teams-bot",
+            "hosting": "azure-web-app",
+            "build": true,
+            "provision": true,
+            "folder": "",
+            "artifactFolder": "bin\\Release\\net6.0\\win-x86\\publish",
+            "capabilities": [
+                "command-response"
+            ],
+            "sso": false,
+            "deploy": true
+        },
+        {
+            "name": "azure-web-app",
+            "connections": [
+                "identity",
+                "aad-app",
+                "teams-bot"
+            ],
+            "provision": true,
+            "scenario": "Bot"
+        },
+        {
+            "name": "bot-service",
+            "provision": true
+        },
+        {
+            "name": "identity"
+        }
+    ]
 }
