--- a/ZenyaFacadeService/Dockerfile
+++ b/ZenyaFacadeService/Dockerfile
@@ -1,22 +1,22 @@
-##See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-#
-#FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
-#WORKDIR /app
-#EXPOSE 80
-#EXPOSE 443
-#
-#FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-#WORKDIR /src
-#COPY ["ZenyaFacadeService/ZenyaFacadeService.csproj", "ZenyaFacadeService/"]
-#RUN dotnet restore "ZenyaFacadeService/ZenyaFacadeService.csproj"
-#COPY . .
-#WORKDIR "/src/ZenyaFacadeService"
-#RUN dotnet build "ZenyaFacadeService.csproj" -c Release -o /app/build
-#
-#FROM build AS publish
-#RUN dotnet publish "ZenyaFacadeService.csproj" -c Release -o /app/publish /p:UseAppHost=false
-#
-#FROM base AS final
-#WORKDIR /app
-#COPY --from=publish /app/publish .
-#ENTRYPOINT ["dotnet", "ZenyaFacadeService.dll"]
+#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
+
+FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+WORKDIR /app
+EXPOSE 80
+EXPOSE 443
+
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+WORKDIR /src
+COPY ["ZenyaFacadeService.csproj", "ZenyaFacadeService/"]
+RUN dotnet restore "ZenyaFacadeService/ZenyaFacadeService.csproj"
+WORKDIR "/src/ZenyaFacadeService"
+COPY . .
+RUN dotnet build "ZenyaFacadeService.csproj" -c Release -o /app/build
+
+FROM build AS publish
+RUN dotnet publish "ZenyaFacadeService.csproj" -c Release -o /app/publish /p:UseAppHost=false
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
+ENTRYPOINT ["dotnet", "ZenyaFacadeService.dll"]
